fix minor screen details

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h1 class="text-[#333333] text-2xl tracking-wide w-[17.5rem] mt-0 md:text-3xl md:w-[23rem]">We create beautiful and fast web services</h1>
           </div>
           <div class="p-2 minior:pl-5 mt-5 lmd:pl-10 mb-5">
-            <div class="w-[22.5rem] rounded-lg h-24 micro:w-[23rem] mini:w-[25rem] mini:h-28 minior:w-[31.5rem] md:w-[calc(100%-1.25rem)] md:h-48 lmd:w-[52rem] lmd:h-56 lg:w-[calc(100%-1.25rem)] lg:h-60 xl:h-80 2xl:h-72 bg-no-repeat bg-cover" style="background-image: url('heroImage.jpg');">
+            <div class="w-[22.5rem] rounded-lg h-24 micro:w-[23rem] mini:w-[25rem] mini:h-28 minior:w-[31.5rem] md:w-[calc(100%-1.25rem)] md:h-48 lmd:w-[52rem] lmd:h-56 lg:w-[calc(100%-1.25rem)] lg:h-60 xl:h-80 1.5xl:h-96 2xl:h-72 bg-no-repeat bg-cover" style="background-image: url('heroImage.jpg');">
 
             </div>
           </div>
