improve navbar functionality

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,700,1,0" />
    
 
-    <title>Devchallenges</title>
+    <title>Edie</title>
     <link rel="stylesheet" href="styles.css">
 
 
